VariationHandling/JES_files/2016_preVFP/Histo_1000_TTToSemiLeptonic_boostedShiftedSrc18Down.err
[8MB/2.258GB][  0%][>                                                 ][4MB/s]  [16MB/2.258GB][  0%][>                                                 ][5.333MB/s]  [40MB/2.258GB][  1%][>                                                 ][10MB/s]  [56MB/2.258GB][  2%][=>                                                ][11.2MB/s]  [80MB/2.258GB][  3%][=>                                                ][13.33MB/s]  [104MB/2.258GB][  4%][==>                                               ][14.86MB/s]  [128MB/2.258GB][  5%][==>                                               ][16MB/s]  [152MB/2.258GB][  6%][===>                                              ][16.89MB/s]  [176MB/2.258GB][  7%][===>                                              ][17.6MB/s]  [192MB/2.258GB][  8%][====>                                             ][17.45MB/s]  [216MB/2.258GB][  9%][====>                                             ][18MB/s]  [240MB/2.258GB][ 10%][=====>                                            ][18.46MB/s]  [264MB/2.258GB][ 11%][=====>                                            ][18.86MB/s]  [288MB/2.258GB][ 12%][======>                                           ][19.2MB/s]  [312MB/2.258GB][ 13%][======>                                           ][19.5MB/s]  [336MB/2.258GB][ 14%][=======>                                          ][19.76MB/s]  [360MB/2.258GB][ 15%][=======>                                          ][20MB/s]  [384MB/2.258GB][ 16%][========>                                         ][20.21MB/s]  [408MB/2.258GB][ 17%][========>                                         ][20.4MB/s]  [432MB/2.258GB][ 18%][=========>                                        ][20.57MB/s]  [456MB/2.258GB][ 19%][=========>                                        ][20.73MB/s]  [480MB/2.258GB][ 20%][==========>                                       ][20.87MB/s]  [504MB/2.258GB][ 21%][==========>                                       ][21MB/s]  [528MB/2.258GB][ 22%][===========>                                      ][21.12MB/s]  [552MB/2.258GB][ 23%][===========>                                      ][21.23MB/s]  [576MB/2.258GB][ 24%][============>                                     ][21.33MB/s]  [600MB/2.258GB][ 25%][============>                                     ][21.43MB/s]  [624MB/2.258GB][ 26%][=============>                                    ][21.52MB/s]  [656MB/2.258GB][ 28%][==============>                                   ][21.87MB/s]  [680MB/2.258GB][ 29%][==============>                                   ][21.94MB/s]  [704MB/2.258GB][ 30%][===============>                                  ][22MB/s]  [728MB/2.258GB][ 31%][===============>                                  ][22.06MB/s]  [760MB/2.258GB][ 32%][================>                                 ][22.35MB/s]  [784MB/2.258GB][ 33%][================>                                 ][22.4MB/s]  [816MB/2.258GB][ 35%][=================>                                ][22.67MB/s]  [848MB/2.258GB][ 36%][==================>                               ][22.92MB/s]  [880MB/2.258GB][ 38%][===================>                              ][23.16MB/s]  [912MB/2.258GB][ 39%][===================>                              ][23.38MB/s]  [944MB/2.258GB][ 40%][====================>                             ][23.6MB/s]  [984MB/2.258GB][ 42%][=====================>                            ][24MB/s]  [1024MB/2.258GB][ 44%][======================>                           ][24.38MB/s]  [1.039GB/2.258GB][ 46%][=======================>                          ][24.74MB/s]  [1.078GB/2.258GB][ 47%][=======================>                          ][25.09MB/s]  [1.109GB/2.258GB][ 49%][========================>                         ][25.24MB/s]  [1.148GB/2.258GB][ 50%][=========================>                        ][25.57MB/s]  [1.18GB/2.258GB][ 52%][==========================>                       ][25.7MB/s]  [1.211GB/2.258GB][ 53%][==========================>                       ][25.83MB/s]  [1.25GB/2.258GB][ 55%][===========================>                      ][26.12MB/s]  [1.297GB/2.258GB][ 57%][============================>                     ][26.56MB/s]  [1.352GB/2.258GB][ 59%][=============================>                    ][27.14MB/s]  [1.398GB/2.258GB][ 61%][==============================>                   ][27.54MB/s]  [1.438GB/2.258GB][ 63%][===============================>                  ][27.77MB/s]  [1.477GB/2.258GB][ 65%][================================>                 ][28MB/s]  [1.523GB/2.258GB][ 67%][=================================>                ][28.36MB/s]  [1.562GB/2.258GB][ 69%][==================================>               ][28.57MB/s]  [1.602GB/2.258GB][ 70%][===================================>              ][28.77MB/s]  [1.648GB/2.258GB][ 73%][====================================>             ][29.1MB/s]  [1.688GB/2.258GB][ 74%][=====================================>            ][29.29MB/s]  [1.734GB/2.258GB][ 76%][======================================>           ][29.6MB/s]  [1.773GB/2.258GB][ 78%][=======================================>          ][29.77MB/s]  [1.82GB/2.258GB][ 80%][========================================>         ][30.06MB/s]  [1.859GB/2.258GB][ 82%][=========================================>        ][30.22MB/s]  [1.906GB/2.258GB][ 84%][==========================================>       ][30.5MB/s]  [1.953GB/2.258GB][ 86%][===========================================>      ][30.77MB/s]  [2GB/2.258GB][ 88%][============================================>     ][31.03MB/s]  [2.047GB/2.258GB][ 90%][=============================================>    ][31.28MB/s]  [2.102GB/2.258GB][ 93%][==============================================>   ][31.65MB/s]  [2.156GB/2.258GB][ 95%][===============================================>  ][32MB/s]  [2.211GB/2.258GB][ 97%][================================================> ][32.34MB/s]  [2.258GB/2.258GB][100%][==================================================][33.03MB/s]  [2.258GB/2.258GB][100%][==================================================][33.03MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_35886/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_35886/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
